# screen-tutor

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  screen.rs
src/components/: Settings.css  Settings.tsx  TestPanel.css  TestPanel.tsx  VisionDebugPanel.css  VisionDebugPanel.tsx  index.ts
src/providers/: client.ts  fallback.ts  health.ts  index.ts  registry.ts  types.ts
src/store/: index.ts  provider-store.ts
src/vision/: capture.ts  index.ts  types.ts
