[package]
name = "screen-tutor"
version = "0.1.0"
description = "AI-powered desktop screen agent for teaching DAWs"
authors = []
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "screen_tutor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
screenshots = "0.8"
# Pinned to 0.24 because the `screenshots` crate depends on image 0.24 types.
# Upgrading to 0.25+ causes type mismatches (ImageBuffer from different image versions).
image = "0.24"
base64 = "0.22"
